# bazel-java-test

./: BUILD.bazel  README.md  WORKSPACE  case1.md  case2.md  case3.md
src/bazeltest/: BUILD.bazel  ByteBufferWriter.java  Main.java  UnsafeUtil.java
